--- a/conf/system.conf
+++ b/conf/system.conf
@@ -3,10 +3,10 @@ data_file = ./data/corpus/collection.tsv
 location_path = ./data/index/msmacro_stemmer_bm25
 
 [retriever]
-data_file = C:\Users\Edrick\PycharmProjects\code\ir-with-llm\data\corpus\collection.tsv
-location_path = C:\Users\Edrick\PycharmProjects\ir-with-llm\data\index\ms_bm25
+data_file = ./data/corpus/collection.tsv
+location_path = ./data/index/ms_bm25
 
 [eval]
-location_path = C:\\Users\\Edrick\\PycharmProjects\\ir-with-llm\\data\\index\\ms_bm25
-topic_file_path = C:\\Users\\Edrick\\PycharmProjects\\ir-with-llm\\data\\corpus\\msmarco-test2019-queries.tsv
-qrels_file_path = C:\\Users\\Edrick\\PycharmProjects\\ir-with-llm\\data\\corpus\\2019qrels-pass.txt
+location_path = ./data/index/ms_bm25
+topic_file_path = ./data/corpus/msmarco-test2019-queries.tsv
+qrels_file_path = ./data/corpus/2019qrels-pass.txt
