--- a/conf/system.conf
+++ b/conf/system.conf
@@ -1,10 +1,10 @@
 [construct_index]
-data_file = ./data/corpus/collection.tsv
+data_file = ./data/corpus/simple_collection.tsv
 location_path = ./data/index/msmacro_stemmer_bm25
 
 [retriever]
-data_file = ./data/corpus/collection.tsv
-location_path = ./data/index/ms_bm25
+data_file = ./data/corpus/simple_collection.tsv
+location_path = ./data/index/msmacro_stemmer_bm25
 
 [eval]
 location_path = ./data/index/ms_bm25
